// Copyright 2025 The Bazel Authors. All rights reserved.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//    http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
syntax = "proto3";

import "private/proto/common.proto";

option java_package = "com.google.devtools.intellij.ideinfo";

message CIdeInfo {
  // Information collected from rules_cc rule attributes.
  message RuleContext {
    repeated ArtifactLocation sources = 1;
    repeated ArtifactLocation headers = 2;
    repeated ArtifactLocation textual_headers = 3;

    repeated string copts = 4;
    repeated string args = 5;

    string include_prefix = 6;
    string strip_include_prefix = 7;
  }

  // Information collected from CcInfo provider.
  message CompilationContext {
    repeated ArtifactLocation headers = 1;

    repeated string defines = 2;
    repeated string includes = 3;
    repeated string quote_includes = 4;
    repeated string system_includes = 5;
  }

  RuleContext rule_context = 1;
  CompilationContext compilation_context = 2;
}

message PyIdeInfo {
  enum PythonVersion {
    UNKNOWN = 0;
    PY2 = 1;
    PY3 = 2;
  }

  enum PythonSrcsVersion {
    SRC_UNKNOWN = 0;
    SRC_PY2 = 1;
    SRC_PY3 = 2;
    SRC_PY2AND3 = 3;
    SRC_PY2ONLY = 4;
    SRC_PY3ONLY = 5;
  }

  repeated ArtifactLocation sources = 1;
  string launcher = 2;
  // the python version this target has been configured for
  PythonVersion python_version = 3;
  // the python versions this target is compatible with
  PythonSrcsVersion srcs_version = 4;
  repeated string args = 5;
  repeated string imports = 6;
  bool is_code_generator = 7;
}

message JsIdeInfo {
  repeated ArtifactLocation sources = 1;
}

message TsIdeInfo {
  repeated ArtifactLocation sources = 1;
}

message DartIdeInfo {
  repeated ArtifactLocation sources = 1;
}

message CToolchainIdeInfo {
  string target_name = 1;
  repeated string cpp_option = 2;
  repeated string c_option = 3;
  string c_compiler = 4;
  string cpp_compiler = 5;
  repeated string built_in_include_directory = 6;
  string compiler_name = 7;
  string sysroot = 8;
}

message TestInfo {
  string size = 1;
}

message TargetKey {
  string label = 1;
  repeated string aspect_ids = 3;
}

message Dependency {
  enum DependencyType {
    COMPILE_TIME = 0;
    RUNTIME = 1;
  }

  TargetKey target = 1;
  DependencyType dependency_type = 2;
}

message TargetIdeInfo {
  string kind_string = 1;
  TargetKey key = 2;
  ArtifactLocation build_file_artifact_location = 3;
  repeated Dependency deps = 4;
  repeated string tags = 5;
  repeated string features = 6;
  TestInfo test_info = 7;

  // The time this target was most recently synced, in milliseconds since epoch.
  // Not provided by the aspect directly; instead filled in by the plugin during
  // sync.
  int64 sync_time_millis = 20;

  CIdeInfo c_ide_info = 120;
  CToolchainIdeInfo c_toolchain_ide_info = 121;

  PyIdeInfo py_ide_info = 130;
  JsIdeInfo js_ide_info = 150;
  TsIdeInfo ts_ide_info = 160;
  DartIdeInfo dart_ide_info = 170;
}
